cmake_minimum_required(VERSION 3.5)

FIND_PROGRAM(CCACHE_FOUND ccache)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE(FindCUDA)

CUDA_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


SET(CMAKE_CXX_FLAGS "--std=c++11")

CUDA_ADD_EXECUTABLE(dLearn kernel.cu)
ADD_LIBRARY(storage STATIC storage.cpp)

CUDA_ADD_CUBLAS_TO_TARGET(dLearn)
TARGET_LINK_LIBRARIES(dLearn ${CUDA_curand_LIBRARY})
TARGET_LINK_LIBRARIES(dLearn storage)
TARGET_LINK_LIBRARIES(dLearn ${OpenCV_LIBS})
